module-03-terraform-basics/module-03.8-resource-dependencies-in-terraform/handson-labs/implicit-dependency-lab/implicit-dependency-code/security_group.tf
resource "aws_security_group" "web" {
  name        = "web-sg-implicit-lab"
  description = "Security group for implicit dependency lab"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "web-security-group-implicit-lab"
  }
}
